@@ -7,6 +7,7 @@ Tania Bento <tbento@redhat.com>
 Thomas Fitzsimmons <fitzsim@redhat.com>
 Kyle Galloway <kgallowa@redhat.com>
 Andrew Haley <aph@redhat.com>
+Matthias Klose <doko@ubuntu.com>
 Francis Kung <fkung@redhat.com>
 Casey Marshall <csm@gnu.org>
 Raif Naffah <admin@naffah-raif.name>
