@@ -1,3 +1,13 @@
+2007-10-02  Lillian Angel  <langel@redhat.com>
+
+	* AUTHORS: Added Matthias Klose.
+
+2007-10-02  Matthias Klose  <doko@ubuntu.com>
+
+	* configure.ac: Add --with-ant-home support.
+	* Makefile.am: Use SYSTEM_ANT_DIR.
+	* configure, Makefile.in: Regenerate.
+
 2007-10-01  Lillian Angel  <langel@redhat.com>
 
 	* patches/icedtea-java-home.patch: Removed
